fix(front): #3394 broken images in use cases
Former-commit-id: b78232281fb6522bb66a080afd03e84cf440da98

--- a/new/theme/2020/templates/use-cases/feature.html
+++ b/new/theme/2020/templates/use-cases/feature.html
@@ -47,7 +47,7 @@
 				alt="Young hacker smiling">
 				Back to {{ page.section }}
     </a>
-    {% if not page.slug.endswith('critical-information/') %}
+    {% if not page.slug.endswith('critical-info/') %}
 		<a class="feature-button-r roboto fw1 fr f3-ns f5 no-underline c-fluid-bk"
 			 href="{{ SITEURL }}/{{ page.nextpage }}">
 				<img
