feat(front): #3391 privacy policy to the footer
- Added a button to the Privacy Policy at the bottom of the page


Former-commit-id: 6a88433fd0f059fc656e12065b29ce9918ca35c2

--- a/new/theme/2020/templates/footer.html
+++ b/new/theme/2020/templates/footer.html
@@ -195,5 +195,10 @@
        href="{{ SITEURL }}/terms-use/">
        Terms of Use
     </a>
+    <span class="c-fluid-gray f6"> - </span>
+    <a class="c-fluid-bk f6 fw2 mt2 roboto no-underline hv-fluid-dkred"
+       href="{{ SITEURL }}/privacy/">
+       Privacy Policy
+    </a>
   </div>
 </div>
