feat(front): #3327 download brochure file
Former-commit-id: fe9634933e1afc6ed6f7ac47a74063f14644bfa4

--- a/new/theme/2020/templates/thank-you.html
+++ b/new/theme/2020/templates/thank-you.html
@@ -170,7 +170,7 @@
             </a>
           </div>
           <div class="dib tc w-100-s w-100-m pv3 fl-l">
-            <a class="roboto fw1 f5 no-underline c-fluid-bk hv-fluid-dkred" href="#">
+            <a class="roboto fw1 f5 no-underline c-fluid-bk hv-fluid-dkred" href="https://fluidattacks.docsend.com/view/8d3wwu7gbs5xn6t7">
               <span class="br2 ph-bt pv-bt bannerbt hv-bt-fluid-rd bt-trans white b roboto pointer mt2">
                 Download Brochure
               </span>
