--- a/front/src/graphics/index.css
+++ b/front/src/graphics/index.css
@@ -6,3 +6,17 @@
   top: 50%;
   transform: translate(-50%, -50%);
 }
+
+:local .panel {
+  padding: 25px;
+}
+
+:local .panelTitle {
+  /* Using important to override the global react-bootstrap style */
+  background-color: #fbfbfb !important;
+}
+
+:local .panelFooter {
+  /* Using important to override the global react-bootstrap style */
+  background-color: #fbfbfb !important;
+}
