fix(front): #3375 fix breadcrumb width
Former-commit-id: 4e6121490a6b2d213825f1dcf9cd2a92caafee65

--- a/new/theme/2020/templates/category.html
+++ b/new/theme/2020/templates/category.html
@@ -21,8 +21,8 @@
 <div class="pv0">
   <!-- navcontent-info -->
   <div class="df ma-auto bg-fluid-black">
-    <div class="roboto f6-l f7 tl mw-banner">
-      <ul class="dib list w-100">
+    <div class="roboto f6-l f7 tl mw9 ml-auto mr-auto">
+      <ul class="dib list w-100 mh5-l pl0-l">
         <li class="dib mt0">
           <a class="c-fluid-gray hover-white no-underline"
              href="{{ SITEURL }}/">
