--- a/new/theme/2020/templates/page.html
+++ b/new/theme/2020/templates/page.html
@@ -35,7 +35,7 @@
   <!-- navcontent-info -->
   <div class="df ma-auto bg-fluid-black">
     <div class="roboto f6-l f7 tl mw9 ml-auto mr-auto">
-      <ul class="dib list w-100 mh5-l pl0-l">
+      <ul class="dib list w-auto mh5-l pl0-l pl3 ml1">
         <li class="dib mt0">
           <a class="c-fluid-gray hover-white no-underline"
              href="{{ SITEURL }}/">
