feat(front): #2140.18 hard stack update
- React and D3 are not compatible, React wants his virtual DOM
  and that's fine. D3 wants the real DOM
- I'll satisfy both by loading D3 in an i-frame and React
  for the rest of the things
- The best of both worlds
- Temporarily the charts tab will render a chart with an
  error inside, until I do some back-end stuff

- no-deltas-check


Former-commit-id: b326c1294858246add794086937acfc473e48144

--- a/front/src/graphics/components/Graphic/index.css
+++ b/front/src/graphics/components/Graphic/index.css
@@ -1,5 +1,12 @@
-:local .errorComponent {
-  color: #cccccc;
+:local .frame {
+  border-style: none;
+  height: 100%;
+  overflow: hidden;
+  width: 100%;
+}
+
+:local .loadingComponent {
+  color: #eeeeee;
   left: 50%;
   position: absolute;
   text-align: center;
