--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -187,6 +187,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .hover-card { &:hover {
   box-shadow: 0px 20px 20px $darkshadow; } }
 .mh-100 { max-height: 100%;}
+.ph-10 {padding-right: 10%; padding-left: 10%; }
 
 // Tachyons custom responsive classes
 
@@ -608,5 +609,11 @@ video {
     &:hover {
       color: white;;
     }
+  }
+}
+
+.blog-description {
+  p {
+    font-size: 16px;
   }
 }
