feat(cross): #2140.20 generators
- no-deltas-check


Former-commit-id: 5f61ae490e76c5b48a6294c19cbfffee5c2f536b

--- a/front/src/graphics/components/Graphic/index.css
+++ b/front/src/graphics/components/Graphic/index.css
@@ -10,8 +10,7 @@
   left: 50%;
   position: absolute;
   text-align: center;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%);
 }
 
 :local .panelTitle {
