--- a/app/templates/graphic.html
+++ b/app/templates/graphic.html
@@ -4,13 +4,19 @@
   <head>
     <meta charset="utf-8">
 
+    <!-- Include C3 -->
+    <link href="{% static 'external/C3/c3-0.7.18/c3.css' %}" rel="stylesheet">
+    <script src="{% static 'external/C3/c3-0.7.18/c3.js' %}"></script>
+
+    <!-- Include D3 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"></script>
+
+    <link href="{% static 'styles/graphic.css' %}" rel="stylesheet" type="text/css"  media="screen"/>
+    <script src="{% static generator_src %}"></script>
+
+    <!-- Include Data Document -->
     <!-- https://docs.djangoproject.com/en/3.0/ref/templates/builtins/#json-script -->
     {{ args | json_script:"args" }}
-
-    <!-- Includes -->
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/graphic.css' %}" media="screen"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"></script>
-    <script src="{% static generator_src %}"></script>
   </head>
   <body onload="load()">
     <svg id="root"></svg>
