feat(cross): #2140.29 c three based pie chart
Former-commit-id: 50c4d6b35033314b513d327fe1bafb0c4460f702

--- a/app/templates/graphic.html
+++ b/app/templates/graphic.html
@@ -19,6 +19,6 @@
     {{ args | json_script:"args" }}
   </head>
   <body onload="load()">
-    <svg id="root"></svg>
+    <div id="root"></div>
   </body>
 </html>
