feat(front): #2140.30 color palette
Former-commit-id: 76a806e00cadbd202c534f14d91b3c1223809821

--- a/app/templates/graphic.html
+++ b/app/templates/graphic.html
@@ -11,6 +11,7 @@
     <!-- Include D3 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"></script>
 
+    <!-- Include graphic generator -->
     <link href="{% static 'styles/graphic.css' %}" rel="stylesheet" type="text/css"  media="screen"/>
     <script src="{% static generator_src %}"></script>
 
