--- a/new/theme/2020/templates/contact-us.html
+++ b/new/theme/2020/templates/contact-us.html
@@ -161,7 +161,7 @@
                   class="c-fluid-red fr fw8 dn">
             Number is not valid</span>
         </div>
-        {% assets output="static/js/intlTelInput.js", "../node_modules/intl-tel-input/build/js/intlTelInput.js" %}
+        {% assets filters="uglifyjs", output="static/js/intlTelInput.min.js", "../node_modules/intl-tel-input/build/js/intlTelInput.js" %}
           <script type="text/javascript"
                   src="{{ SITEURL }}/{{ ASSET_URL }}">
           </script>
