refac(cross): #3423.1 fix-descriptions-keywords
- Meta descriptions and keywords were changed on some pages


Former-commit-id: 5e38308465604195eaeebb6978663064cf910d3e

--- a/new/theme/2020/templates/index.html
+++ b/new/theme/2020/templates/index.html
@@ -5,11 +5,11 @@
 
 {% block meta %}
   <meta name="description"
-        content="Here you can find all the articles published to the blog, which may
-        address an opinion, a solution to a challenge, or just general
-        information, all related to the field of Information Security.">
+        content="Read Fluid Attacks' blog posts about IT, pentesting,
+        hacking challenges writeups, information security,
+        and ethical hacking recent trends.">
   <meta name="keywords"
-        content="Articles, Blog, Opinion, Challenge, Information, Security">
+        content="Blog, Articles, Opinion, Challenge, Pentesting, Security, Ethical Hacking, Trends">
 {% endblock meta %}
 
 {% block canonical %}
