--- a/new/theme/2020/templates/landing.html
+++ b/new/theme/2020/templates/landing.html
@@ -6,12 +6,11 @@
 
 {% block meta %}
 <meta name="description"
-      content="We are a company specialized in Ethical Hacking over Applications and
-      Infrastructure. We are hackers who develop our own tools and exploits,
-      with the aim of identifying all the vulnerabilities of your applications
-      and report them as soon as possible.">
+      content="We're a pentesting and ethical hacking company
+      that identifies and reports all your applications
+      and software vulnerabilities ASAP.">
 <meta name="keywords"
-      content="{Fluid Attacks, Ethical Hacking, Vulnerability, Diagnosis, Application, Infrastructure.">
+      content="{Fluid Attacks, Pentesting, Ethical Hacking, Security Testing, Cybersecurity">
 {% endblock meta %}
 
 {% block title %}Home | {{ SITENAME }}{% endblock title %}
