--- a/new/theme/2020/templates/products/integrates.html
+++ b/new/theme/2020/templates/products/integrates.html
@@ -6,13 +6,13 @@
 
 {% block meta %}
 <meta name="description"
-      content="Integrates is a system which provides all interested parties
-      information and updates about the current state of the project, the number
-      of security findings discovered and its criticality, occurrences, among
-      other information in order to keep close contact with our customers.">
+      content="Integrates is a platform
+      that provides information such as security findings,
+      criticality, occurrences, among other data
+      to all project stakeholders.">
 <meta name="keywords"
-      content="Fluid Attacks, Products, Integrates, Ethical Hacking, Pentesting,
-      Security.">
+      content="Fluid Attacks, Products, Integrates, Stakeholders,
+      Security, Red Team Platform">
 {% endblock meta %}
 
 {% block title %}
