refac(cross): #3423.2 fix-descriptions-keywords
- Meta descriptions and keywords were changed on some pages


Former-commit-id: 36e875a78ccd6b2518a16f089c51506938da242f

--- a/new/theme/2020/templates/products/products.html
+++ b/new/theme/2020/templates/products/products.html
@@ -6,13 +6,11 @@
 
 {% block meta %}
 <meta name="description"
-      content="The purpose of this page is to present the products offered by
-      Fluid Attacks, which focus on helping customers in the security testing
-      process, aiming to improve their experience and allowing us to keep close
-      contact with them. Our star products are Integrates and Asserts.">
+      content="Fluid Attacks offers products
+      focused on helping customers in the security testing process.
+      Find here how Integrates, Drills, and Forces work.">
 <meta name="keywords"
-      content="Fluid Attacks, Products, Ethical Hacking, Pentesting, Security,
-      Information.">
+      content="Fluid Attacks, Security Testing, Integrates, Drills, Forces">
 {% endblock meta %}
 
 {% block title %}
