--- a/new/theme/2020/templates/use-cases/continuous.html
+++ b/new/theme/2020/templates/use-cases/continuous.html
@@ -6,14 +6,12 @@
 
 {% block meta %}
 <meta name="description"
-      content="Our Continuous Hacking service
-      aims to detect and report all the vulnerabilities in your
-      application as soon as possible. Our participation in the development
-      life cycle allow us to continuously detect security findings in a
-      development environment.">
+      content="Our Continuous Hacking detects and reports
+      all the vulnerabilities and security issues
+      during the whole software development life cycle.">
 <meta name="keywords"
-      content="Fluid Attacks, Services, Continuous Hacking, Ethical Hacking,
-      Pentesting, Security.">
+      content="Fluid Attacks, Services, Continuous Hacking,
+      Ethical Hacking, Security, Software Development Life Cycle">
 {% endblock meta %}
 
 {% block title %}
