--- a/new/theme/2020/templates/use-cases/feature.html
+++ b/new/theme/2020/templates/use-cases/feature.html
@@ -6,13 +6,12 @@
 
 {% block meta %}
 <meta name="description"
-	  content="Fluid Attacks services aim to detect and report all existing
-	  vulnerabilities and security issues within an application.
-	  Our professional team continuously develop their own tools and exploits to
-	  ensure the detection of all security findings with no false positives.">
+	  content="Fluid Attacks' Continuous Hacking Healthcheck
+	  intends to catch up with your development team
+	  to identify failures before continuing the development process.">
 <meta name="keywords"
-	  content="Fluid Attacks, Services, Ethical Hacking, Pentesting, Security,
-	  Information.">
+	  content="Fluid Attacks, Continuous Hacking, Healthcheck,
+	  Development Process, Development Team">
 {% endblock meta %}
 
 {% block title %}
