--- a/new/theme/2020/templates/use-cases/one-shot.html
+++ b/new/theme/2020/templates/use-cases/one-shot.html
@@ -6,13 +6,12 @@
 
 {% block meta %}
 <meta name="description"
-      content="In this page we present our One Shot Hacking service, which aims
-      to detect and report all vulnerabilities and security issues within your
-      application. The rigorous inspection of our team allow us to detect all
-      existing security findings with no false positives.">
+      content="Our One-Shot Hacking service
+      reports security vulnerabilities
+      in specific versions of your applications.">
 <meta name="keywords"
-      content="Fluid Attacks, Services, Ethical Hacking, Pentesting, Security,
-      Application.">
+      content="Fluid Attacks, Services, Ethical Hacking, Security,
+      Application, Vulnerabilities, One-Shot Hacking">
 {% endblock meta %}
 
 {% block title %}
