--- a/new/theme/2020/templates/base.html
+++ b/new/theme/2020/templates/base.html
@@ -32,6 +32,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.3/languages/gherkin.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.3/languages/powershell.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.3/languages/xml.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.0/languages/shell.min.js"></script>
       <script>hljs.initHighlightingOnLoad();</script>
       <!-- End Highlight.js -->
 
