refac(front): #3434.1 fix-h1-pages
- h1 was changed for Home and Career pages


Former-commit-id: 616c2fa0b7fdccf5c66786b257108345cdeed647

--- a/new/theme/2020/templates/landing.html
+++ b/new/theme/2020/templates/landing.html
@@ -27,7 +27,7 @@
     </div>
     <!-- Banner title and text -->
     <div class="fl-l w-50-l w100-m w90-s mt3-l center pt0-ns pt4">
-      <p class="c-fluid-bk fheader-l f-6-m fheader-s fheader-vl fw9 tl tc-m neue ma0">PENTEST</p>
+      <h1 class="c-fluid-bk fheader-l f-6-m fheader-s fheader-vl fw9 tl tc-m neue ma0">PENTEST</h1>
       <p class="c-fluid-bk roboto fw8 lh2 f-sub ma0 tl tc-m w-auto-ns nt4-ns">
         FOR YOUR SOFTWARE DEVELOPMENT LIFE CYCLE
       </p>
@@ -191,9 +191,9 @@
 <!-- Use Cases -->
 <div class="mw9 center h6 pv5 mv5">
   <div class="tl fr-l w-40-l">
-    <h1 class="c-fluid-bk center roboto w-100 tl-l tc f2-ns f3 mb0 pb4">
+    <h2 class="c-fluid-bk center roboto w-100 tl-l tc f2-ns f3 mb0 pb4">
       Use Cases
-    </h1>
+    </h2>
     <div class="continuous dn-l">
       <ul class="list tc w-40-l w-100 ph2">
         <li>
@@ -308,9 +308,9 @@
 <!-- About us section -->
 <div class="mw9 center h6 pt6 pb6-ns mt5">
   <div class="tl fl-l w-40-l">
-    <h1 class="c-fluid-bk center roboto w-100 tl-l tc f1-ns lh3 pl3-l ph3">
+    <h2 class="c-fluid-bk center roboto w-100 tl-l tc f1-ns lh3 pl3-l ph3">
       Worldwide Hacking Experts
-    </h1>
+    </h2>
   </div>
   <div class="pl3-l pr0-l dib w-100 pb4">
     <ul class="list fl-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc">
