refac(cross): #3423.3 fix-keywords
- The keywords Ethical Hacking and Pentesting were added to some pages.


Former-commit-id: 655a81f8c4ca5d82fb7e630edeaf1400946a46d1

--- a/new/theme/2020/templates/products/products.html
+++ b/new/theme/2020/templates/products/products.html
@@ -10,7 +10,8 @@
       focused on helping customers in the security testing process.
       Find here how Integrates, Drills, and Forces work.">
 <meta name="keywords"
-      content="Fluid Attacks, Security Testing, Integrates, Drills, Forces">
+      content="Fluid Attacks, Security Testing, Integrates, Drills, Forces,
+      Pentesting, Ethical Hacking">
 {% endblock meta %}
 
 {% block title %}
