--- a/new/theme/2020/templates/use-cases/feature.html
+++ b/new/theme/2020/templates/use-cases/feature.html
@@ -11,7 +11,7 @@
 	  to identify failures before continuing the development process.">
 <meta name="keywords"
 	  content="Fluid Attacks, Continuous Hacking, Healthcheck,
-	  Development Process, Development Team">
+	  Development Process, Development Team, Pentesting, Ethical Hacking">
 {% endblock meta %}
 
 {% block title %}
