--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -3,7 +3,7 @@
     <ul class="list ma0 pa0 overflow-hidden">
       <li class="fl">
         <a class="db tc pa1 no-underline" href="{{ SITEURL }}/">
-          <img class="w5-l w-logo ml5-l ml3 mv2 absolute"
+          <img loading="lazy" class="w5-l w-logo ml5-l ml3 mv2 absolute"
             src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/logo-menu-new.svg" alt="Young hacker smiling">
         </a>
       </li>
@@ -23,7 +23,7 @@
         <input type="checkbox" id="op" class="dn" />
         <div class="lower w1 absolute right-small mr5-l">
           <label for="op" class="w2-l w1 absolute right-small pointer z-100 mv4-l pv2-l mv3 pv-4-m">
-            <img class="lower-img mt-menu-bt" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/menu.svg"
+            <img loading="lazy" class="lower-img mt-menu-bt" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/menu.svg"
               alt="Young hacker smiling">
             </label>
         </div>
@@ -31,6 +31,7 @@
           <div class="mw9 tr ml-auto mr-auto ph3">
             <label for="op" class="mr5-l right-small">
               <img
+                loading="lazy"
                 class="lower-img w2-l w1 mv4-l pv2-l mv3 pv-4-m right-0 pointer z-100 relative"
                 src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/cross.png"
                 alt="Young hacker smiling">
@@ -42,7 +43,7 @@
                 <li class="db pb3">
                   <input class="dn" type="radio" name="menu3" id="products-title">
                   <label for="products-title" class="pointer hv-fluid-rd f3 c-fluid-bk fw3 menu-txt-trans roboto">
-                    Products <div class="dib w1"><img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-down.svg" alt="arrow down"></div></label>
+                    Products <div class="dib w1"><img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-down.svg" alt="arrow down"></div></label>
                   </a>
                   <div class="products-list pv2 dn">
                     <ul class="list">
@@ -72,7 +73,7 @@
                 <li class="db pb3">
                   <input class="dn" type="radio" name="menu3" id="usecases-title">
                   <label for="usecases-title" class="pointer hv-fluid-rd f3 c-fluid-bk fw3 menu-txt-trans roboto">
-                    Use Cases <div class="dib w1"><img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-down.svg" alt="arrow down"></div></label>
+                    Use Cases <div class="dib w1"><img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-down.svg" alt="arrow down"></div></label>
                   </a>
                   <div class="usecases-list pv2 dn">
                     <ul class="list">
@@ -96,7 +97,7 @@
                 <li class="db pb3">
                   <input class="dn" type="radio" name="menu3" id="aboutus-title">
                   <label for="aboutus-title" class="pointer hv-fluid-rd f3 c-fluid-bk fw3 menu-txt-trans roboto">
-                    About Us <div class="dib w1"><img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-down.svg" alt="arrow down"></div></label>
+                    About Us <div class="dib w1"><img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-down.svg" alt="arrow down"></div></label>
                   </a>
                   <div class="aboutus-list pv2 dn">
                     <ul class="list">
@@ -174,7 +175,7 @@
                 <li class="db pb3">
                   <input class="dn" type="radio" name="menu3" id="careers-title">
                   <label for="careers-title" class="pointer hv-fluid-rd f3 c-fluid-bk fw3 menu-txt-trans roboto">
-                    Careers <div class="dib w1"><img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-down.svg" alt="arrow down"></div></label>
+                    Careers <div class="dib w1"><img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-down.svg" alt="arrow down"></div></label>
                   </a>
                   <div class="careers-list pv2 dn">
                     <ul class="list">
@@ -222,19 +223,19 @@
                 <!-- social media -->
                 <div class="divsocial tl flex pt4 pb3">
                   <a class="pr3" href="https://twitter.com/fluidattacks">
-                    <img class="grow-large hv-fluid-rd w2 grayscale" src="{{ SITEURL }}/theme/images/social-media/twitter.png"
+                    <img loading="lazy" class="grow-large hv-fluid-rd w2 grayscale" src="{{ SITEURL }}/theme/images/social-media/twitter.png"
                       alt="Twitter logo">
                   </a>
                   <a class="pr3" href="https://www.facebook.com/Fluid-Attacks-267692397253577/">
-                    <img class="grow-large hv-fluid-rd w2 grayscale" src="{{ SITEURL }}/theme/images/social-media/facebook.png"
+                    <img loading="lazy" class="grow-large hv-fluid-rd w2 grayscale" src="{{ SITEURL }}/theme/images/social-media/facebook.png"
                       alt="Facebook logo">
                   </a>
                   <a class="pr3" href="https://www.linkedin.com/company/fluidattacks/">
-                    <img class="grow-large hv-fluid-rd w2 grayscale" src="{{ SITEURL }}/theme/images/social-media/linkedin.png"
+                    <img loading="lazy" class="grow-large hv-fluid-rd w2 grayscale" src="{{ SITEURL }}/theme/images/social-media/linkedin.png"
                       alt="Linkedin logo">
                   </a>
                   <a class="pr3" href="https://www.youtube.com/user/fluidsignal">
-                    <img class="grow-large hv-fluid-rd w2 grayscale" src="{{ SITEURL }}/theme/images/social-media/youtube.png"
+                    <img loading="lazy" class="grow-large hv-fluid-rd w2 grayscale" src="{{ SITEURL }}/theme/images/social-media/youtube.png"
                       alt="Youtube logo">
                   </a>
                 </div>
