--- a/new/theme/2020/templates/products/integrates.html
+++ b/new/theme/2020/templates/products/integrates.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
 <!-- Tachyons stylesheet -->
-<link rel="stylesheet"
+<link rel="preload"
+      as="style"
+      onload="this.rel = 'stylesheet'"
       href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
 
 {% block meta %}
@@ -48,7 +50,7 @@
 <div class="tc pt3">
   <ul class="pl0">
     <li class="dib pr4-l pr3-m pr2">
-      <img class="w1 h1 nbs"
+      <img loading="lazy" class="w1 h1 nbs"
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/line-menu.svg"
         alt="Young hacker smiling">
       <a href="{{ SITEURL }}/products/integrates/"
@@ -216,7 +218,7 @@
       </h1>
       <a class="no-underline c-fluid-bk" href="https://fluidattacks.docsend.com/view/ymup7742z3wkkzex">
         <button class="f2-l fw1 tc f4 center roboto download-btn bg-transparent bn pointer">
-          Download Data Sheet  <span><img class="w2-ns w1" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/download.svg" alt="Young hacker smiling"></span>
+          Download Data Sheet  <span><img loading="lazy" class="w2-ns w1" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/download.svg" alt="Young hacker smiling"></span>
         </button>
       </a>
   </div>
