--- a/new/theme/2020/templates/footer.html
+++ b/new/theme/2020/templates/footer.html
@@ -1,16 +1,18 @@
 <!-- Tachyons stylesheet -->
-<link rel="stylesheet"
+<link rel="preload"
+      as="style"
+      onload="this.rel = 'stylesheet'"
       href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
 <div class="mw9 flex-l ml-auto ml-auto mr-auto mb5-l mb5-m mb4 pt4-ns pt2 footer-component">
   <!-- company logo -->
   <div class="pt1 pt4-l pl2-l w-33-l">
     <div>
-      <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/footer-logo.png"
+      <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/footer-logo.png"
         alt="Fluid Attacks logo" class="w2-5 fl ml5 pl3 nl3-l mr0-l db-l dn">
       <div class="ml4-l w6 mr-auto ml-auto tl-l tc">
         <p class="c-fluid-bk roboto b f-footer mv0 ml3 db-l dn">Ready to start with Fluid Attacks?</p>
         <span class="c-fluid-bk roboto b f3 mt0 mh2 dn-l db pb4">
-          <div class="w2-5 dib"><img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/footer-logo.png"
+          <div class="w2-5 dib"><img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/footer-logo.png"
             alt="Fluid Attacks logo"></div>
           Ready to start?</span>
         <div class="dib-l dn ml3">
