--- a/new/theme/2020/templates/index.html
+++ b/new/theme/2020/templates/index.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
-<link rel="stylesheet"
+<link rel="preload"
+      as="style"
+      onload="this.rel = 'stylesheet'"
       href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
 
 {% block meta %}
@@ -54,7 +56,7 @@ Blog | {{ SITENAME }}
     <div
       class="br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns w-100 w-75-m w-30-l ma-auto bg-white">
       {% if  article.featured_image %}
-        <img src="{{ SITEURL }}/blog/{{ article.slug }}{{ article.featured_image }}"
+        <img loading="lazy" src="{{ SITEURL }}/blog/{{ article.slug }}{{ article.featured_image }}"
              alt="{{ article.alt }}"
              class="br3 br--top">
       {% endif %}
