--- a/new/theme/2020/templates/use-cases/continuous.html
+++ b/new/theme/2020/templates/use-cases/continuous.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
 <!-- Tachyons stylesheet -->
-<link rel="stylesheet"
+<link rel="preload"
+      as="style"
+      onload="this.rel = 'stylesheet'"
       href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
 
 {% block meta %}
