--- a/new/theme/2020/templates/base.html
+++ b/new/theme/2020/templates/base.html
@@ -110,9 +110,7 @@
       {% endfor %}
       <!-- Compress and Minify CSS files and bundle from SASS files -->
         {% assets filters="scss, cssmin", output="static/css/theme.min.css", "scss/base.scss", "../node_modules/intl-tel-input/src/css/intlTelInput.scss" %}
-          <link rel="preload"
-                as="style"
-                onload="this.rel = 'stylesheet'"
+          <link rel="stylesheet"
                 type="text/css"
                 href="{{ SITEURL }}/{{ ASSET_URL }}">
         {% endassets %}
