--- a/new/theme/2020/templates/index.html
+++ b/new/theme/2020/templates/index.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
 
-<link rel="preload"
-      as="style"
-      onload="this.rel = 'stylesheet'"
-      href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
+<link
+  rel="stylesheet"
+  href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
 
 {% block meta %}
   <meta name="description"
