--- a/new/theme/2020/templates/products/integrates.html
+++ b/new/theme/2020/templates/products/integrates.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
 
 <!-- Tachyons stylesheet -->
-<link rel="preload"
-      as="style"
-      onload="this.rel = 'stylesheet'"
-      href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
+<link
+  rel="stylesheet"
+  href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
 
 {% block meta %}
 <meta name="description"
