feat(front): #2135 center content on tables
- Centered vertically and horizontally content of all tables


Former-commit-id: 7d61baa56858adc1696990d0a4f554e802fffd49

--- a/front/src/components/DataTableNext/index.css
+++ b/front/src/components/DataTableNext/index.css
@@ -21,7 +21,8 @@
 }
 
 :local .tableBody > td {
-  vertical-align: middle;
+  text-align: center !important;
+  vertical-align: middle !important;
 }
 
 :local .label {
