feat(front): #2200 center titles
- Centered titles on tables and removed center property from
  content of tables


Former-commit-id: 1ca4441251db46c6d64e96280370744259b92492

--- a/front/src/components/DataTableNext/index.css
+++ b/front/src/components/DataTableNext/index.css
@@ -12,6 +12,7 @@
 
 :local .tableHeader > th {
   text-align: center !important;
+  vertical-align: middle !important;
   white-space: unset !important;
   font-weight: 400;
 }
@@ -21,8 +22,7 @@
 }
 
 :local .tableBody > td {
-  text-align: center !important;
-  vertical-align: middle !important;
+  vertical-align: middle;
 }
 
 :local .label {
