--- a/new/theme/2020/templates/tag.html
+++ b/new/theme/2020/templates/tag.html
@@ -56,7 +56,7 @@
         </li>
         <li class="dib mt0">
           <a class="white hover-white no-underline"
-             href=".">{{ tag }}
+             href=".">{{ tag|capitalize }}
           </a>
         </li>
       </ul>
