fix(front): #3415 fix rules breadcrumb
Former-commit-id: 8ad702cff844daba5711106545c0b2da619d26a1

--- a/new/theme/2020/templates/findings.html
+++ b/new/theme/2020/templates/findings.html
@@ -47,6 +47,13 @@
           {% endif %}
           {% if page.rulesindex and page.slug == "rules/" %}
           <li class="dib mt0">
+            <a class="c-fluid-gray hover-white no-underline"
+               href="{{ SITEURL }}/resources/">
+              Resources
+            </a>
+            <span class="c-fluid-gray v-mid b"> / </span>
+          </li>
+          <li class="dib mt0">
             <a class="white hover-white no-underline"
                 href=".">Rules</a>
           </li>
