--- a/new/theme/2020/templates/page.html
+++ b/new/theme/2020/templates/page.html
@@ -114,6 +114,13 @@
             {% if page.extended %}
             <li class="dib mt0">
               <a class="c-fluid-gray hover-white no-underline"
+                 href="{{ SITEURL }}/resources/">
+                 Resources
+              </a>
+            </li>
+            <span class="c-fluid-gray v-mid b"> / </span>
+            <li class="dib mt0">
+              <a class="c-fluid-gray hover-white no-underline"
                  href="{{ SITEURL }}/rules/">
                  Rules
               </a>
@@ -133,6 +140,13 @@
               </a>
             </li>
             {% else %}
+            <li class="dib mt0">
+              <a class="c-fluid-gray hover-white no-underline"
+                 href="{{ SITEURL }}/resources/">
+                 Resources
+              </a>
+            </li>
+            <span class="c-fluid-gray v-mid b"> / </span>
             <li class="dib mt0">
               <a class="c-fluid-gray hover-white no-underline"
                  href="{{ SITEURL }}/rules/">
