refac(front): #3421 home-update-drills
- The text about Drills on Home has been updated.


Former-commit-id: 8050b5b69d896af883a9ac0a0c32c57b95b4cdcf

--- a/new/theme/2020/templates/landing.html
+++ b/new/theme/2020/templates/landing.html
@@ -134,9 +134,11 @@
         <li>
           <a class="no-underline" href="{{ SITEURL }}/products/drills">
             <p class="c-fluid-bk roboto fw1 tl f4 lh-2">
-              <strong class="b">Drills</strong>, through human creativity and intelligence, finds deep and zero-day
-              vulnerabilities during software development. Forget about false positives and get detailed evidence,
-              accurate attack vectors, and critical information extraction.
+              <strong class="b">Drills</strong>, through the right combination
+              of technology and human intelligence, finds deep and zero-day vulnerabilities
+              during the software development life cycle.
+              Forget about false positives and escapes.
+              <strong class="b">Drills</strong> includes SAST, DAST, SCA, and IAST techniques.
             </p>
           </a>
         </li>
