refac(front): #3422 home-update-forces
- The text about Forces on Home has been updated.


Former-commit-id: 8f2345fd63734f4f9d98356c988370e8250ab4bf

--- a/new/theme/2020/templates/landing.html
+++ b/new/theme/2020/templates/landing.html
@@ -169,10 +169,9 @@
         <li>
           <a class="no-underline" href="{{ SITEURL }}/products/forces/">
             <p class="c-fluid-bk roboto fw1 tl f4 lh-2">
-              <strong class="b">Forces</strong>, making use of human skills for the creation of
-              exploits, breaks your build to force remediation of
-              confirmed deep vulnerabilities, re-opened vulnerabilities,
-              and new peripheral vulnerabilities.
+              <strong class="b">Forces</strong>: exploits that break the build
+              to force remediation of confirmed deep vulnerabilities,
+              re-opened vulnerabilities, and new peripheral vulnerabilities.
               It can also verify your post-deploy production status.
             </p>
           </a>
