refac(front): #3440 home-update-continuous
- The text about Continuous Hacking on Home has been updated.


Former-commit-id: 27f53a961c4c3ea161bcc201d28d9b74d028f8e2

--- a/new/theme/2020/templates/landing.html
+++ b/new/theme/2020/templates/landing.html
@@ -242,10 +242,11 @@
       <ul class="list fr-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc">
         <li>
           <p class="roboto fw1 tl f3-ns f5 lh-2">
-            All vulnerabilities and security issues are continuously
-            detected and reported during the entire software development cycle.
-            Fluid Attacks runs comprehensive testing, detecting all
-            vulnerabilities with no false positives.
+            All vulnerabilities and security issues are continuously detected
+            and reported during the entire software development cycle.
+            Fluid Attacks runs comprehensive testing
+            through SAST, DAST, IAST, and SCA techniques,
+            detecting all vulnerabilities with no false positives.
           </p>
         </li>
         <li class="pt4-l">
